// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersSeenPostBottomSheet component renders correctly loading data users seen post bottom sheet view 1`] = `
<View
  style={
    Object {
      "height": 800.4,
      "paddingBottom": 0,
      "paddingHorizontal": 0,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#181C32",
          "fontFamily": "BeVietnamPro-SemiBold",
          "fontSize": 13,
        },
        Object {
          "color": "#7335C0",
        },
        Object {
          "paddingBottom": 8,
          "paddingLeft": 14,
          "paddingTop": 8,
        },
      ]
    }
  >
    Interested by 
    0
  </Text>
  <View
    style={
      Object {
        "backgroundColor": "#7335C0",
        "height": 2,
        "marginBottom": 16,
        "marginLeft": 14,
        "width": 73,
      }
    }
  />
  <RCTScrollView
    ListFooterComponent={[Function]}
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.1}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <ActivityIndicator
          color="#A4A9B7"
          testID="loading_indicator"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`UsersSeenPostBottomSheet component should render list users seen post 1`] = `
<View
  style={
    Object {
      "height": 800.4,
      "paddingBottom": 0,
      "paddingHorizontal": 0,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#181C32",
          "fontFamily": "BeVietnamPro-SemiBold",
          "fontSize": 13,
        },
        Object {
          "color": "#7335C0",
        },
        Object {
          "paddingBottom": 8,
          "paddingLeft": 14,
          "paddingTop": 8,
        },
      ]
    }
  >
    Interested by 
    2
  </Text>
  <View
    style={
      Object {
        "backgroundColor": "#7335C0",
        "height": 2,
        "marginBottom": 16,
        "marginLeft": 14,
        "width": 73,
      }
    }
  />
  <RCTScrollView
    ListFooterComponent={[Function]}
    data={
      Array [
        Object {
          "avatar": "https://bein-entity-attribute-sandbox.s3.ap-southeast-1.amazonaws.com/user/avatar/images/original/19c296be-b4d7-4343-aa18-e0024503ca48.jpg",
          "email": "hoangnhat@tgm.vn",
          "fullname": "Hoàng Nhật",
          "groups": Array [
            4,
            5,
            6,
          ],
          "id": 43,
          "username": "hoangnhat",
        },
        Object {
          "avatar": "https://bein-entity-attribute-sandbox.s3.ap-southeast-1.amazonaws.com/user/avatar/images/original/78442999-8f69-403e-afc7-d1a9e4083f7d.jpg",
          "email": "anhthien@tgm.vn",
          "fullname": "Nguyễn Anh Thiện",
          "groups": Array [
            1,
            2,
            3,
          ],
          "id": null,
          "username": "anhthien",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.1}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View>
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 44,
                "opacity": 1,
                "paddingHorizontal": 12,
              }
            }
            testID="users_seen_post_bottom_sheet.item_username.hoangnhat"
          >
            <View
              style={
                Array [
                  Object {
                    "borderRadius": 4,
                    "height": 40,
                    "width": 40,
                  },
                  Object {
                    "marginRight": 12,
                  },
                ]
              }
              testID="avatar"
            >
              <View
                style={
                  Array [
                    Object {
                      "borderRadius": 4,
                      "height": 40,
                      "width": 40,
                    },
                    Object {},
                  ]
                }
                testID="avatar_container"
              >
                <View
                  onLayout={[Function]}
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "position": "relative",
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "opacity": 1,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#f9f9f9",
                          "borderRadius": 4,
                          "height": 40,
                          "justifyContent": "center",
                          "width": 40,
                        }
                      }
                      testID="Image__placeholder"
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "overflow": "hidden",
                        },
                        Object {
                          "borderRadius": 4,
                          "height": 40,
                          "width": 40,
                        },
                      ]
                    }
                  >
                    <FastImageView
                      onFastImageError={[Function]}
                      onFastImageLoadEnd={[Function]}
                      resizeMode="cover"
                      source={
                        Object {
                          "uri": "https://bein-entity-attribute-sandbox.s3.ap-southeast-1.amazonaws.com/user/avatar/images/original/19c296be-b4d7-4343-aa18-e0024503ca48.jpg",
                        }
                      }
                      style={
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                      testID="avatar.image"
                    />
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Text
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "color": "#181C32",
                      "fontFamily": "BeVietnamPro-SemiBold",
                      "fontSize": 13,
                    },
                    Object {},
                    undefined,
                  ]
                }
              >
                Hoàng Nhật
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View>
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 44,
                "opacity": 1,
                "paddingHorizontal": 12,
              }
            }
            testID="users_seen_post_bottom_sheet.item_username.anhthien"
          >
            <View
              style={
                Array [
                  Object {
                    "borderRadius": 4,
                    "height": 40,
                    "width": 40,
                  },
                  Object {
                    "marginRight": 12,
                  },
                ]
              }
              testID="avatar"
            >
              <View
                style={
                  Array [
                    Object {
                      "borderRadius": 4,
                      "height": 40,
                      "width": 40,
                    },
                    Object {},
                  ]
                }
                testID="avatar_container"
              >
                <View
                  onLayout={[Function]}
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "position": "relative",
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "opacity": 1,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#f9f9f9",
                          "borderRadius": 4,
                          "height": 40,
                          "justifyContent": "center",
                          "width": 40,
                        }
                      }
                      testID="Image__placeholder"
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "overflow": "hidden",
                        },
                        Object {
                          "borderRadius": 4,
                          "height": 40,
                          "width": 40,
                        },
                      ]
                    }
                  >
                    <FastImageView
                      onFastImageError={[Function]}
                      onFastImageLoadEnd={[Function]}
                      resizeMode="cover"
                      source={
                        Object {
                          "uri": "https://bein-entity-attribute-sandbox.s3.ap-southeast-1.amazonaws.com/user/avatar/images/original/78442999-8f69-403e-afc7-d1a9e4083f7d.jpg",
                        }
                      }
                      style={
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                      testID="avatar.image"
                    />
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Text
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "color": "#181C32",
                      "fontFamily": "BeVietnamPro-SemiBold",
                      "fontSize": 13,
                    },
                    Object {},
                    undefined,
                  ]
                }
              >
                Nguyễn Anh Thiện
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <ActivityIndicator
          color="#A4A9B7"
          testID="loading_indicator"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;
